--- a/modal/modal.html
+++ b/modal/modal.html
@@ -29,7 +29,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="modal2Label">Film-Management-FullStack</h5>
+                <h5 class="modal-title" id="modal2Label">Film-Management - FullStack</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -45,4 +45,100 @@
         </div>
     </div>
 </div>
+
+<!-- Modal 3 -->
+<div class="modal fade" id="modal3" tabindex="-3" role="dialog" aria-labelledby="modal3Label" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modal3Label">Sistema de Evaluación del Personal - FullStack</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <!-- Carrusel de imágenes -->
+                <div id="carouselExample" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="/img/img-experience/img-evaluacion-personal/img-evaluacion-personal-1.jpg" class="d-block w-100" style="height: 500px;" alt="Imagen 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/img-experience/img-evaluacion-personal/img-evaluacion-personal-2.jpg" class="d-block w-100" style="height: 500px;" alt="Imagen 2">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/img-experience/img-evaluacion-personal/img-evaluacion-personal-3.jpg" class="d-block w-100" style="height: 500px;" alt="Imagen 3">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/img-experience/img-evaluacion-personal/img-evaluacion-personal-4.jpg" class="d-block w-100" style="height: 500px;" alt="Imagen 4">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/img-experience/img-evaluacion-personal/img-evaluacion-personal-5.jpg" class="d-block w-100" style="height: 500px;" alt="Imagen 5">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/img-experience/img-evaluacion-personal/img-evaluacion-personal-6.jpg" class="d-block w-100" style="height: 500px;" alt="Imagen 6">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/img-experience/img-evaluacion-personal/img-evaluacion-personal-7.jpg" class="d-block w-100" style="height: 500px;" alt="Imagen 7">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/img-experience/img-evaluacion-personal/img-evaluacion-personal-8.jpg" class="d-block w-100" style="height: 500px;" alt="Imagen 8">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/img-experience/img-evaluacion-personal/img-evaluacion-personal-9.jpg" class="d-block w-100" style="height: 500px;" alt="Imagen 9">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/img-experience/img-evaluacion-personal/img-evaluacion-personal-10.jpg" class="d-block w-100" style="height: 500px;" alt="Imagen 10">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/img-experience/img-evaluacion-personal/img-evaluacion-personal-11.jpg" class="d-block w-100" style="height: 500px;" alt="Imagen 11">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/img-experience/img-evaluacion-personal/img-evaluacion-personal-12.jpg" class="d-block w-100" style="height: 500px;" alt="Imagen 12">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/img-experience/img-evaluacion-personal/img-evaluacion-personal-13.jpg" class="d-block w-100" style="height: 500px;" alt="Imagen 13">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/img-experience/img-evaluacion-personal/img-evaluacion-personal-14.jpg" class="d-block w-100" style="height: 500px;" alt="Imagen 14">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/img-experience/img-evaluacion-personal/img-evaluacion-personal-15.jpg" class="d-block w-100" style="height: 500px;" alt="Imagen 15">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/img-experience/img-evaluacion-personal/img-evaluacion-personal-16.jpg" class="d-block w-100" style="height: 500px;" alt="Imagen 16">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/img-experience/img-evaluacion-personal/img-evaluacion-personal-17.jpg" class="d-block w-100" style="height: 500px;" alt="Imagen 17">
+                        </div>
+
+                    </div>
+                    <!-- Controles del carrusel -->
+                    <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Anterior</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Siguiente</span>
+                    </a>
+                </div>
+
+                <p class="text-center mt-3">
+                    Desarrollé un sistema de control de desempeño como programador full-stack, donde se podia: 
+                    gestionar las actividades de empleados y practicantes. Implementé roles de administrador y usuario, 
+                    asignación de puntajes, gestión de usuarios con la API de Reniec, generación de informes y control de actividades 
+                    mediante la carga de fotos o videos. 
+                    Este proyecto se creó utilizando Laravel 10, MySQL, HTML, CSS, Bootstrap y JavaScript.
+                </p>
+            </div>
+            <div class="modal-footer">
+                <!--<a href="https://github.com/Jhersonva/Film-Management-FullStack.git" class="btn btn-primary" target="_blank">
+                    Ver en GitHub <i class="fa-brands fa-github"></i>
+                </a>-->
+            </div>
+        </div>
+    </div>
+</div>
+
 
