Actualizaciones Generales: Archivo CV - Agregando nuevos proyectos

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             </a>
             <a href="https://app.aluracursos.com/user/jherson2408va/fullCertificate/a9cae80230e1b7e68f14ff9ce93fbc30?fbclid=IwY2xjawE8knRleHRuA2FlbQIxMAABHby2B81r-MgCgQtqBhQQtZBqursI6KA1vpKw0N-Bd6OKOtuLZnPosM_wCw_aem_sbtUzJ7zwbG5ZPCn6iNqug" target="_blank" style="text-decoration: none;">
                 <button>
-                    Ver Certificado De Especialización<img src="img/img-certificado/img-certificado-especializacion.png" style="width: 40px;" alt="">
+                    Ver Certificado De Especialización como Backend<img src="img/img-certificado/img-certificado-especializacion.png" style="width: 40px;" alt="">
                     <span class="overlay"></span>
                 </button>
             </a>
@@ -190,15 +190,11 @@
                 </button>
                 <button class="button"> JWT
                 </button>
-                <button class="button"> SQL
-                </button>
                 <button class="button"> MYSQL
                 </button>
                 <button class="button"> POSTGRESQL
                 </button>
                 <button class="button"> POSTMAN
-                </button>
-                <button class="button"> INSOMNIA
                 </button>
                 <button class="button"> BOOTSTRAP
                 </button>
@@ -210,21 +206,19 @@
                 </button>
                 <button class="button"> APIREST
                 </button>
-                <button class="button"> MAVEN
+                <button class="button"> JAVASCRIPT
                 </button>
-                <button class="button"> COMPOSER
+                <button class="button"> REACT
                 </button>
-                <button class="button"> VSCODE
+                <button class="button"> TAILWIND
                 </button>
-                <button class="button"> INTELLIJ IDEA
-                </button>
-                <button class="button"> ARQUITECTURA HEXAGONAL  
+                <button class="button"> TYPESCRIPT
                 </button>
                 <button class="button"> MVC
                 </button>
-                <button class="button"> POO
+                <button class="button"> LARAVEL
                 </button>
-                <button class="button">DIAGRAMAS UML ESTRUCTURALES
+                <button class="button">PHP
                 </button>
             </div>
             <img src="img/img-skills/coding-programmer.png" style="width: 30%; height: 30%;" alt="imagen-coffe">
@@ -348,6 +342,7 @@
                         <a href="https://github.com/Jhersonva/Screen-Match-Phrase-Generator-FullStack.git" target="_blank" class="btn-github">GitHub</a>
                     </div>
                 </div>
+
                 <div class="proyecto">
                     <img src="img/img-experience/img-film-manager.jpg" alt="">
                     <div class="overlay">
@@ -366,6 +361,26 @@
                         <p>FullStack</p>
                         <button class="btn-visualizar" data-toggle="modal" data-target="#modal3">Visualizar</button>
                         <a href="https://github.com/Jhersonva/Film-Management-FullStack.git" target="_blank" class="btn-github">GitHub</a>
+                    </div>
+                </div>
+
+                <div class="proyecto">
+                    <img src="img/img-experience/img-movie-search.jpg" alt="">
+                    <div class="overlay">
+                        <h3>App Movie Search : Buscador de Peliculas | Frontend</h3>
+                        <p>Frontend</p>
+                        <button class="btn-visualizar" data-toggle="modal" data-target="#modal4">Visualizar</button>
+                        <a href="https://github.com/Jhersonva/app-buscador-peliculas-js.git" target="_blank" class="btn-github">GitHub</a>
+                    </div>
+                </div>
+
+                <div class="proyecto">
+                    <img src="img/img-experience/img-pending-task.jpg" alt="">
+                    <div class="overlay">
+                        <h3>App Pending Tasks : Tareas Pendientes | Frontend</h3>
+                        <p>Frontend</p>
+                        <button class="btn-visualizar" data-toggle="modal" data-target="#modal5">Visualizar</button>
+                        <a href="https://github.com/Jhersonva/app-pending-tasks-react-typescript.git" target="_blank" class="btn-github">GitHub</a>
                     </div>
                 </div>
 
@@ -417,7 +432,7 @@
             <a href="https://wa.me/926461654" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             <a href="https://www.linkedin.com/in/jherson-villa-arcibia-01660b252/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
             <a href="mailto:jherson2408va@gmail.com"><i class="fa-solid fa-envelope"></i></a>
-            <p>&copy; 2024 Jherson Villa A. Todos los derechos reservados.</p>
+            <p>&copy; <span id="year"></span> Jherson Villa A. Todos los derechos reservados.</p>
         </div>
     </footer>
 
