--- a/modal/modal.html
+++ b/modal/modal.html
@@ -35,7 +35,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <video src="/videos/video-gestion-peliculas.mp4" controls></video>
+                <video src="/videos/video-app-film-management.mp4" controls></video>
                 <p style="text-align: center;">Film-Management es un sistema de gestión de películas FullStack que permite a los usuarios gestionar registros de películas mediante operaciones CRUD. 
                     Este proyecto se creó utilizando Java, Spring Boot, JPA, Validatión MySQL, HTML, CSS y JavaScript.</p>
             </div>
@@ -136,6 +136,54 @@
                 <!--<a href="https://github.com/Jhersonva/Film-Management-FullStack.git" class="btn btn-primary" target="_blank">
                     Ver en GitHub <i class="fa-brands fa-github"></i>
                 </a>-->
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal 4 -->
+<div class="modal fade" id="modal4" tabindex="-2" role="dialog" aria-labelledby="modal4Label" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modal2Label">App Movie Search - Frontend</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <video src="/videos/video-app-movie-search.mp4" controls></video>
+                <p style="text-align: center;">Buscador de películas desarrollado con HTML, CSS y JavaScript que consume la API de TMDb. Permite buscar películas por título y 
+                    mostrar su póster, fecha de lanzamiento y descripción. Esta subido en Netlify</p>
+                
+                <a href="https://app-buscador-movies-js.netlify.app/" target="_blank"><span>Click para probar la App</span></a>
+            </div>
+            <div class="modal-footer">
+                <a href="https://github.com/Jhersonva/app-buscador-peliculas-js.git" class="btn btn-primary" target="_blank">Ver en GitHub <i class="fa-brands fa-github"></i></a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal 5 -->
+<div class="modal fade" id="modal5" tabindex="-2" role="dialog" aria-labelledby="modal5Label" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modal2Label">App Pending Tasks - Frontend</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <video src="/videos/vide-app-pending-tasks-react-typescript.mp4" controls></video>
+                <p style="text-align: center;">Aplicación web que permite crear, listar y eliminar las tareas, esta
+                    desarrollado con React y TypeScript. Esta subido en Netlify</p>
+                
+                <a href="https://app-pending-tasks-react-typescript.netlify.app/" target="_blank"><span>Click para probar la App</span></a>
+            </div>
+            <div class="modal-footer">
+                <a href="https://github.com/Jhersonva/app-pending-tasks-react-typescript.git" class="btn btn-primary" target="_blank">Ver en GitHub <i class="fa-brands fa-github"></i></a>
             </div>
         </div>
     </div>
