Agregando un  proyecto al Portfolio

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jherson Villa - BACKEND DEV</title>
+    <title>Jherson Villa - FullStack DEV</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- AOS Animation CSS -->
@@ -336,7 +336,7 @@
                 <div class="proyecto">
                     <img src="img/img-experience/img-screenmatch-frases.jpg" alt="">
                     <div class="overlay">
-                        <h3>Screen Match : Phrase-Generator</h3>
+                        <h3>Generador de Frases</h3>
                         <p>FullStack</p>
                         <button class="btn-visualizar" data-toggle="modal" data-target="#modal1">Visualizar</button>
                         <a href="https://github.com/Jhersonva/Screen-Match-Phrase-Generator-FullStack.git" target="_blank" class="btn-github">GitHub</a>
@@ -346,7 +346,7 @@
                 <div class="proyecto">
                     <img src="img/img-experience/img-film-manager.jpg" alt="">
                     <div class="overlay">
-                        <h3>Film-Management</h3>
+                        <h3>Gestión Cinematográfica</h3>
                         <p>FullStack</p>
                         <button class="btn-visualizar" data-toggle="modal" data-target="#modal2">Visualizar</button>
                         <a href="https://github.com/Jhersonva/Film-Management-FullStack.git" target="_blank" class="btn-github">GitHub</a>
@@ -367,7 +367,7 @@
                 <div class="proyecto">
                     <img src="img/img-experience/img-movie-search.jpg" alt="">
                     <div class="overlay">
-                        <h3>App Movie Search : Buscador de Peliculas | Frontend</h3>
+                        <h3>Aplicación de Buscador de Peliculas con Consumo de API</h3>
                         <p>Frontend</p>
                         <button class="btn-visualizar" data-toggle="modal" data-target="#modal4">Visualizar</button>
                         <a href="https://github.com/Jhersonva/app-buscador-peliculas-js.git" target="_blank" class="btn-github">GitHub</a>
@@ -377,10 +377,20 @@
                 <div class="proyecto">
                     <img src="img/img-experience/img-pending-task.jpg" alt="">
                     <div class="overlay">
-                        <h3>App Pending Tasks : Tareas Pendientes | Frontend</h3>
+                        <h3>Aplicación de Gestión de Tareas Pendientes</h3>
                         <p>Frontend</p>
                         <button class="btn-visualizar" data-toggle="modal" data-target="#modal5">Visualizar</button>
                         <a href="https://github.com/Jhersonva/app-pending-tasks-react-typescript.git" target="_blank" class="btn-github">GitHub</a>
+                    </div>
+                </div>
+
+                <div class="proyecto">
+                    <img src="img/img-experience/img-auth-product-crud.png" alt="">
+                    <div class="overlay">
+                        <h3>Aplicación con Autenticación y Crud de Productos</h3>
+                        <p>FullStack</p>
+                        <button class="btn-visualizar" data-toggle="modal" data-target="#modal6">Visualizar</button>
+                        <a href="https://github.com/Jhersonva/fullstack-product-auth-crud.git" target="_blank" class="btn-github">GitHub</a>
                     </div>
                 </div>
 
