Nuevo proyecto subido al portfolio - pagina web cactus pro

--- a/modal/modal.html
+++ b/modal/modal.html
@@ -1,6 +1,7 @@
 <!-- modal.html -->
  
-<!-- Modal 1 -->
+<!-- Modal 1 
+
 <div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="modal1Label" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -19,6 +20,31 @@
             </div>
             <div class="modal-footer">
                 <a href="https://github.com/Jhersonva/Screen-Match-Phrase-Generator-FullStack.git" class="btn btn-primary" target="_blank">Ver en GitHub <i class="fa-brands fa-github"></i></a>
+            </div>
+        </div>
+    </div>
+</div>-->
+
+<!-- Modal 1 -->
+<div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="modal1Label" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modal1Label">Página web para la empresa Cactus Pro - Frontend</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <video src="/videos/video-web-cactus-pro.mp4" controls></video>
+                <p style="text-align: center;">La página web, fue personalizada de prueba para la empresa de Cactus Pro que permite visualizar 
+                    informar a los usuarios sobre los servicios que ofrece, el frontend está desarrollado con HTML, CSS, y JavaScript para una experiencia de usuario 
+                    interactiva. Fue Desarrollada durante mis estudios como practicante dentro de la empresa Cactus Pro. Esta subido en GitHub Pages🚀</p>
+
+                    <a href="https://jhersonva.github.io/Pagina-Cactus-Pro/" target="_blank"><span>Click para visualziar la Web</span></a>
+                </div>
+            <div class="modal-footer">
+                <a href="https://github.com/Jhersonva/Pagina-Cactus-Pro.git" class="btn btn-primary" target="_blank">Ver en GitHub <i class="fa-brands fa-github"></i></a>
             </div>
         </div>
     </div>
