--- a/index.html
+++ b/index.html
@@ -333,6 +333,7 @@
         <div class="contenido-seccion">
             <h2>PORTFOLIO</h2>
             <div class="galeria">
+                <!--
                 <div class="proyecto">
                     <img src="img/img-experience/img-screenmatch-frases.jpg" alt="">
                     <div class="overlay">
@@ -340,6 +341,16 @@
                         <p>FullStack</p>
                         <button class="btn-visualizar" data-toggle="modal" data-target="#modal1">Visualizar</button>
                         <a href="https://github.com/Jhersonva/Screen-Match-Phrase-Generator-FullStack.git" target="_blank" class="btn-github">GitHub</a>
+                    </div>
+                </div>-->
+
+                <div class="proyecto">
+                    <img src="img/img-experience/img-sitio-web-cactuspro.jpg" alt="">
+                    <div class="overlay">
+                        <h3>Página Web | Cactus Pro</h3>
+                        <p>Frontend</p>
+                        <button class="btn-visualizar" data-toggle="modal" data-target="#modal1">Visualizar</button>
+                        <a href="https://github.com/Jhersonva/Pagina-Cactus-Pro.git" target="_blank" class="btn-github">GitHub</a>
                     </div>
                 </div>
 
@@ -375,6 +386,17 @@
                 </div>
 
                 <div class="proyecto">
+                    <img src="img/img-experience/img-movie-search.jpg" alt="">
+                    <div class="overlay">
+                        <h3>Aplicación de Buscador de Peliculas con Consumo de API</h3>
+                        <p>Frontend</p>
+                        <button class="btn-visualizar" data-toggle="modal" data-target="#modal4">Visualizar</button>
+                        <a href="https://github.com/Jhersonva/app-buscador-peliculas-js.git" target="_blank" class="btn-github">GitHub</a>
+                    </div>
+                </div>
+
+                <!--
+                <div class="proyecto">
                     <img src="img/img-experience/img-pending-task.jpg" alt="">
                     <div class="overlay">
                         <h3>Aplicación de Gestión de Tareas Pendientes</h3>
@@ -382,7 +404,7 @@
                         <button class="btn-visualizar" data-toggle="modal" data-target="#modal5">Visualizar</button>
                         <a href="https://github.com/Jhersonva/app-pending-tasks-react-typescript.git" target="_blank" class="btn-github">GitHub</a>
                     </div>
-                </div>
+                </div>-->
 
                 <div class="proyecto">
                     <img src="img/img-experience/img-auth-product-crud.png" alt="">
